--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header>
-    <h1>Imagem</h1>
+    <img class="cabecalho-imagem" src="Kipatourlogo.png" alt="logo KipaTour">
     <ul>
         <li>Ínicio</li>
         <li>Ajuda</li>
