--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header>
+   <header class="cabecalho">
     <img class="cabecalho-imagem" src="Kipatourlogo.png" alt="logo KipaTour">
-    <ul>
-        <li>Ínicio</li>
-        <li>Ajuda</li>
+    <ul class="lista">
+        <li class="cabecalho-lista-item">Ínicio</li>
+        <li class="cabecalho-lista-item">Ajuda</li>
     </ul>
    </header>
     
